--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -15,7 +15,7 @@
     
 .spinner {
   position: relative;
-  display: inline-block;
+  display: block;
   width: 1em;
   height: 1em;
   margin: 0 auto;
