--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -34,7 +34,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  z-index: 10000;
+  z-index: 3000;
   width: 100%;
   max-width: 100vw;
   padding: 28px;
@@ -124,6 +124,14 @@
 
     & > p {
       word-break: break-all;
+    }
+  }
+
+  &.change-name {
+    z-index: 10000;
+
+    & > .btn {
+      margin-top: 30px;
     }
   }
 
