--- a/src/components/Wallets/Wallets.scss
+++ b/src/components/Wallets/Wallets.scss
@@ -90,6 +90,7 @@
   /* stylelint-disable-next-line no-descending-specificity */
   & > span {
     background: url(../../images/deposit.svg);
+    background-size: 20px;
   }
 
   &:hover {
