--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -388,6 +388,7 @@
       position: absolute;
       top: 50%;
       right: 22px;
+      display: none;
       transform: translateY(-50%);
     }
   }
