--- a/src/index.scss
+++ b/src/index.scss
@@ -788,7 +788,7 @@ body.dark > #root {
     }
   
     & > p {
-      font-weight: var(--semibold-font-weight);
+      font-weight: var(--medium-font-weight);
       font-size: var(--large-font-size);
     }
   }
