--- a/src/index.scss
+++ b/src/index.scss
@@ -126,7 +126,7 @@ h1, h2, h3, h4, h5, h6 {
 
 input {
   width: 100%;
-  height: 72px;
+  height: 36px;
   margin-bottom: 0;
   padding: 22px;
   color: var(--dark-color);
@@ -644,10 +644,10 @@ body.dark > #root {
 
   .withdraw-button {
     & > span {
-      margin-top: 1px;
+      margin-top: 4px;
       background-image: url(./images/mdi_arrow_downward_dark_disable.svg);
       background-repeat: no-repeat;
-      background-size: 16px;
+      background-size: 13px;
     }
   }
 
@@ -776,6 +776,10 @@ body.dark > #root {
     height: 72px;
     font-size: var(--large-font-size);
     border-radius: 36px;
+  }
+
+  input {
+    height: 72px;
   }
 
   .welcome-text {
