--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -79,16 +79,14 @@
       height: 25px;
       min-height: 25px;
       margin: 0 10px;
+      border-radius: 15px;
     }
 
     & > p {
       display: none;
       max-width: 160px;
       margin: 0;
-      overflow: hidden;
       font-size: var(--md-font-size);
-      white-space: nowrap;
-      text-overflow: ellipsis;
     }
   }
 }
