--- a/src/index.scss
+++ b/src/index.scss
@@ -460,12 +460,12 @@ input[type="radio"]:focus + .contact-manage{
       }
     }
   }
+}
 
-  & .balances-contact-edit {
-      width: 20px;
-      padding: 15px;
-      background-image: url(./images/mdi_more_horiz.svg);
-  }
+.balances-contact-edit {
+  width: 20px;
+  padding: 15px;
+  background-image: url(./images/mdi_more_horiz.svg);
 }
 
 .custom-selector {
