--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -453,7 +453,10 @@
 
       &-input {
         position: unset;
-        width: 100px;
+        width: 90px;
+        margin-top: -10px;
+        margin-bottom: 10px;
+        margin-left: -10px;
         font-size: var(--md-font-size);
       }
 
