feat: bugs list

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,7 +25,7 @@
   --error-color: rgba(255, 101, 35, 0.17);
   --delete-color: #AE1E1E;
   --links-color: #4E529A;
-  --success-color: #27AE60;
+  --success-color: #5cb85c;
   --transparent: transparent;
 
   --xs-font-size: 11px;
