--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -43,6 +43,15 @@
   }
 }
 
+.success-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+  color: var(--light-bg-color);
+  background-color: var(--success-color);
+  border-radius: 5px;
+}
 
 .info-block {
   display: flex;
@@ -162,7 +171,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  max-width: 130px;
+  max-width: 160px;
   margin-left: -10px;
   padding: 0 10px;
   color: var(--links-color);
@@ -294,6 +303,15 @@
     background-color: var(--modal-bg-color);
     border-radius: 4px;
 
+    /* stylelint-disable-next-line no-descending-specificity */
+    & > p {
+      align-self: center;
+      width: 100%;
+      margin-left: 50%;
+      text-align: center;
+      transform: translateX(-50%);
+    }
+
     &.open {
       display: block;
     }
@@ -412,6 +430,22 @@
       margin-bottom: 10px;
       color: var(--hints-color);
     }
+  }
+}
+
+p.transaction-field-amount {
+  align-self: start;
+  text-align: left;
+}
+
+p.transaction-hash {
+  align-self: flex-start;
+  text-align: left;
+  word-break: break-all;
+
+  & > a {
+    text-decoration: none;
+    text-decoration: underline;
   }
 }
 
