--- a/src/components/Wallets/Wallets.scss
+++ b/src/components/Wallets/Wallets.scss
@@ -44,6 +44,20 @@
   }
 }
 
+.hint-modal {
+  position: absolute;
+  top: 119px;
+  left: 16px;
+  z-index: 10000;
+  width: 120px;
+  height: 80px;
+  padding: 10px;
+  color: var(--dark-color);
+  background-color: var(--modal-bg-color);
+  border: 1px solid var(--border-color);
+  border-radius: 5px;
+}
+
 .deposit-button, .withdraw-button {
   position: relative;
   margin: 22px 0;
