--- a/src/index.scss
+++ b/src/index.scss
@@ -465,6 +465,7 @@ input[type="radio"] + .contact-manage {
 }
 
 .contact-edit-wrapper:focus-within > .contact-manage {
+  z-index: 10000;
   display: block;
 }
 
